force-app/main/default/objects/Contact/fields/Names_of_Organiztions_Activities__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Organiztions_Activities__c</fullName>
    <label>Names of Organiztions/Activities</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>