force-app/main/default/objects/Contact/fields/New_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>New_Referred_By__c</fullName>
    <label>New Referred By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>