force-app/main/default/objects/Contact/fields/NIRSA_Contact__c.field-meta.xml
<CustomField>
    <fullName>NIRSA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIRSA Contact?</label>
    <type>Checkbox</type>
</CustomField>