force-app/main/default/objects/Contact/fields/No_Longer_with_School__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_with_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer with School?</label>
    <type>Checkbox</type>
</CustomField>