force-app/main/default/objects/Contact/fields/No_longer_with_university__c.field-meta.xml
<CustomField>
    <fullName>No_longer_with_university__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No longer with university?</label>
    <type>Checkbox</type>
</CustomField>