force-app/main/default/objects/Contact/fields/Number_of_Programs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs__c</fullName>
    <formula>IF ( Greek_Life__c = TRUE, 1.0,0) +
IF (Program_Board__c = TRUE, 1.0,0) +
IF ( Student_Goverment__c = TRUE, 1.0,0) +
IF ( Marketing_Association__c = TRUE, 1.0,0) +
IF ( Academic_Organization__c = TRUE, 1.0,0) +
IF ( Sports__c = TRUE, 1.0,0) +
IF ( Intramurals__c = TRUE, 1.0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Programs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>