force-app/main/default/objects/Contact/fields/of_Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>of_Email_Contact__c</fullName>
    <label># of Email Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>