force-app/main/default/objects/Contact/fields/of_Facebook_Friends__c.field-meta.xml
<CustomField>
    <fullName>of_Facebook_Friends__c</fullName>
    <label># of Facebook Friends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>