force-app/main/default/objects/Contact/fields/of_Instant_Message_contacts__c.field-meta.xml
<CustomField>
    <fullName>of_Instant_Message_contacts__c</fullName>
    <label># of Instant Message contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>