force-app/main/default/objects/Contact/fields/of_Leadership_Positions_Currently_Held__c.field-meta.xml
<CustomField>
    <fullName>of_Leadership_Positions_Currently_Held__c</fullName>
    <label># of Leadership Positions Currently Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>