force-app/main/default/objects/Contact/fields/of_Programs__c.field-meta.xml
<CustomField>
    <fullName>of_Programs__c</fullName>
    <label># of Programs</label>
    <summaryForeignKey>Student_Programs__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>