force-app/main/default/objects/Contact/fields/of_Twitter_Followers__c.field-meta.xml
<CustomField>
    <fullName>of_Twitter_Followers__c</fullName>
    <label># of Twitter Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>