force-app/main/default/objects/Contact/fields/On_Campus_Media_Insights__c.field-meta.xml
<CustomField>
    <fullName>On_Campus_Media_Insights__c</fullName>
    <inlineHelpText>Use this field to drop information about what on-campus media assets this contact oversees. This will show in a report to the media team so that they can follow-up with an email if desired.</inlineHelpText>
    <label>On-Campus Media Insights?</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>