force-app/main/default/objects/Contact/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <label>Origination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Career Fair</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>NACA Conference/Convention</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Job Posting</fullName>
            </value>
            <value>
                <fullName>Initial Interest Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>