force-app/main/default/objects/Contact/fields/Other_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_School_Name__c</fullName>
    <label>Other School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>