force-app/main/default/objects/Contact/fields/Passion_Points__c.field-meta.xml
<CustomField>
    <fullName>Passion_Points__c</fullName>
    <label>Passion Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Passion_Points</valueSetName>
    </valueSet>
</CustomField>