force-app/main/default/objects/Contact/fields/PCID__c.field-meta.xml
<CustomField>
    <fullName>PCID__c</fullName>
    <inlineHelpText>Encore</inlineHelpText>
    <label>PCID#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>