force-app/main/default/objects/Contact/fields/Post_Graduation_Email__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduation_Email__c</fullName>
    <description>Riddle &amp; Bloom is expanding its marketing services and will be managing some exciting brand activations beyond college campuses! Since you are graduating, provide an updated email address where we can reach out with new opportunities.</description>
    <label>Post Graduation Email</label>
    <type>Email</type>
</CustomField>