force-app/main/default/objects/Contact/fields/Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Potential_Duplicate__c</fullName>
    <label>Potential Duplicate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>