force-app/main/default/objects/Contact/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He/Him/His</fullName>
            </value>
            <value>
                <fullName>They/Them/Theirs</fullName>
            </value>
            <value>
                <fullName>Ze/Hir</fullName>
            </value>
            <value>
                <fullName>She/Her/Hers</fullName>
            </value>
            <value>
                <fullName>Co/Cos</fullName>
            </value>
            <value>
                <fullName>Hy/Hym/Hys</fullName>
            </value>
            <value>
                <fullName>Xe/Xem/Xyr</fullName>
            </value>
            <value>
                <fullName>No pronoun/Name</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>