force-app/main/default/objects/Contact/fields/Prime_Student_benefits_you_re_aware_of__c.field-meta.xml
<CustomField>
    <fullName>Prime_Student_benefits_you_re_aware_of__c</fullName>
    <label>Prime Student benefits you&apos;re aware of?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free two-day shipping</fullName>
            </value>
            <value>
                <fullName>Prime Video</fullName>
            </value>
            <value>
                <fullName>Prime Music</fullName>
            </value>
            <value>
                <fullName>Prime Photos</fullName>
            </value>
            <value>
                <fullName>Twitch Prime</fullName>
            </value>
            <value>
                <fullName>Exclusive Deals &amp; Promotions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>