force-app/main/default/objects/Contact/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Current Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall 2018 - Spring 2019 Amazon Prime Student Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Spring 2018 SweeTARTS Campus Brand Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Spring 2018 Dunkin&apos; Donuts Student Influencer Program</fullName>
            </value>
            <value>
                <fullName>Spring 2018 Zipcar Digital Content Creator Program</fullName>
            </value>
            <value>
                <fullName>Spring 2018 The Wall Street Journal Student Brand Advocate Program</fullName>
            </value>
            <value>
                <fullName>Spring 2018 FORTO Coffee Student Influencer Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 The Wall Street Journal Student Brand Advocate Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Starry Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Nesquik Brand Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 MARS Insights Student Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 SweeTARTS Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Microsoft Campus Rep Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 LaCroix Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Comcast Xfinity Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Vera Bradley Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Sprint Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Zipcar Program</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Staples Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Nesquik Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 GEICO Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 UNIQLO Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Microsoft Surface Student Ambassador Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Autotrader Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Coffee-mate Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Comcast/Xfinity Program</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Zipcar Program</fullName>
            </value>
            <value>
                <fullName>Fall 2016 - Spring 2017 Servitas/Park West Experiential Program</fullName>
            </value>
            <value>
                <fullName>Fall 2016 - Spring 2017 Servitas/Park West Program</fullName>
            </value>
            <value>
                <fullName>Fall 2016 Sour Punch Program</fullName>
            </value>
            <value>
                <fullName>Fall 2016 Delta Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>