force-app/main/default/objects/Contact/fields/Program_Board__c.field-meta.xml
<CustomField>
    <fullName>Program_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Board</label>
    <type>Checkbox</type>
</CustomField>