force-app/main/default/objects/Contact/fields/Program_Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Drop_Date__c</fullName>
    <description>If a promoter dropped from a program or was removed, please update the date they were removed here.</description>
    <label>Program Drop Date</label>
    <type>Date</type>
</CustomField>