force-app/main/default/objects/Contact/fields/Program_Payment__c.field-meta.xml
<CustomField>
    <fullName>Program_Payment__c</fullName>
    <label>Program Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>