force-app/main/default/objects/Contact/fields/Programs_Worked_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Programs_Worked_Ranking__c</fullName>
    <formula>IF(
  of_Programs__c  &gt;= 3, 15, 
  IF(of_Programs__c &gt;= 2, 10, 
  IF(of_Programs__c &gt;= 1, 5, 
  0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programs Worked Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>