force-app/main/default/objects/Contact/fields/Promoter_Performance__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Performance__c</fullName>
    <label>Promoter Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Dropped program</fullName>
            </value>
            <value>
                <fullName>Fired from program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>