force-app/main/default/objects/Contact/fields/Research_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Research_Opportunities__c</fullName>
    <label>Research Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus Groups</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>