force-app/main/default/objects/Contact/fields/Resume_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_Submission_Date__c</fullName>
    <inlineHelpText>Date Resume was attached to Application via Form Assembly</inlineHelpText>
    <label>Resume Submission Date</label>
    <type>Date</type>
</CustomField>