force-app/main/default/objects/Contact/fields/Social_Media_Interest__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Interest__c</fullName>
    <description>level of interest in social media (Instagram, TikTok, Twitter, etc.)</description>
    <inlineHelpText>Low interest - I barely use or are on any social media platforms
Interested - I use some social media platforms and am interested to learn more about them
Highly interested - I use most social media platforms and want to actively grow my presence on them</inlineHelpText>
    <label>Social Media Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Social_Media_Interest</valueSetName>
    </valueSet>
</CustomField>