force-app/main/default/objects/Contact/fields/Social_Media_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Ranking__c</fullName>
    <formula>IF (of_Facebook_Friends__c &gt;= 600, &quot;High&quot;,
IF (of_Twitter_Followers__c &gt;= 150 , &quot;High&quot;,
IF (of_Instagram_Followers__c &gt;= 300, &quot;High&quot;,
IF (of_Facebook_Friends__c &gt;= 300, &quot;Medium&quot;,
IF (of_Twitter_Followers__c &gt;= 75 , &quot;Medium&quot;,
IF (of_Instagram_Followers__c &gt;= 150, &quot;Medium&quot;, &quot;Null&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Media Ranking</label>
    <type>Text</type>
</CustomField>