force-app/main/default/objects/Contact/fields/Source_Form__c.field-meta.xml
<CustomField>
    <fullName>Source_Form__c</fullName>
    <label>Source Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>