force-app/main/default/objects/Contact/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports</label>
    <type>Checkbox</type>
</CustomField>