force-app/main/default/objects/Contact/fields/Status_in_School__c.field-meta.xml
<CustomField>
    <fullName>Status_in_School__c</fullName>
    <label>Status in School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status_in_School</valueSetName>
    </valueSet>
</CustomField>