force-app/main/default/objects/Contact/fields/Student_Goverment__c.field-meta.xml
<CustomField>
    <fullName>Student_Goverment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Goverment</label>
    <type>Checkbox</type>
</CustomField>