force-app/main/default/objects/Contact/fields/Student_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Student_Ranking__c</fullName>
    <formula>Facebook_Ranking__c + Twitter_Ranking__c + Instagram_Ranking__c + Campus_Involvement_Ranking__c + Programs_Worked_Ranking__c + Housing_Plans_Ranking__c + Year_Ranking__c + Major_Ranking__c + of_Leadership_Positions_Currently_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>