force-app/main/default/objects/Contact/fields/Subscription_to_Faculty_News__c.field-meta.xml
<CustomField>
    <fullName>Subscription_to_Faculty_News__c</fullName>
    <label>Subscription to Faculty News</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
                <default>true</default>
                <label>Subscribed</label>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>