force-app/main/default/objects/Contact/fields/Text_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Text_Email_Signature__c</fullName>
    <label>Text Email Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>