force-app/main/default/objects/Contact/fields/TikTok_Experience__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Experience__c</fullName>
    <description>Level of experience using TikTok</description>
    <inlineHelpText>I do not use TikTok/ I am just a viewer
Beginner- I have minimum knowledge of the platform and only use the basic features when posting
Proficient-I have some knowledge of the platform and use most of the features when posting
Expert- I have a lot of knowledge of the platform and use the most recent trends and features when posting</inlineHelpText>
    <label>TikTok Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I do not use/ viewer</fullName>
                <label>Do not use or view</label>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Proficient</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>