force-app/main/default/objects/Contact/fields/TikTok_Username__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Username__c</fullName>
    <label>TikTok Username</label>
    <type>TextArea</type>
</CustomField>