force-app/main/default/objects/Contact/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time Commitment as WNG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Commitment_as_Fluent_Ambassador</valueSetName>
    </valueSet>
</CustomField>