force-app/main/default/objects/Contact/fields/TPG_Status__c.field-meta.xml
<CustomField>
    <fullName>TPG_Status__c</fullName>
    <label>TPG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>