force-app/main/default/objects/Contact/fields/Twitch_Username__c.field-meta.xml
<CustomField>
    <fullName>Twitch_Username__c</fullName>
    <label>Twitch Username</label>
    <type>TextArea</type>
</CustomField>