force-app/main/default/objects/Contact/fields/Twitter_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Ranking__c</fullName>
    <formula>IF(
  of_Twitter_Followers__c &gt;= 200, 10, 
  IF(of_Twitter_Followers__c &gt;= 150, 5, 
  0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>