force-app/main/default/objects/Contact/fields/Type_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contact__c</fullName>
    <label>Type of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Alumni Center/Association</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Auxiliary Services</fullName>
            </value>
            <value>
                <fullName>Bookstore</fullName>
            </value>
            <value>
                <fullName>Career Center</fullName>
            </value>
            <value>
                <fullName>Dining Services</fullName>
            </value>
            <value>
                <fullName>Event Services</fullName>
            </value>
            <value>
                <fullName>Filming (on campus)</fullName>
            </value>
            <value>
                <fullName>Greek Life</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Off Campus Organization</fullName>
            </value>
            <value>
                <fullName>Orientation/First Year Experience</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Program Board</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Recreation Center</fullName>
            </value>
            <value>
                <fullName>Reservations</fullName>
            </value>
            <value>
                <fullName>Residence Life</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Student Activities</fullName>
            </value>
            <value>
                <fullName>Student Organization Advisor</fullName>
            </value>
            <value>
                <fullName>Student Union</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>University Marketing &amp; Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>