force-app/main/default/objects/Contact/fields/Where_will_you_be_living_this_fall__c.field-meta.xml
<CustomField>
    <fullName>Where_will_you_be_living_this_fall__c</fullName>
    <label>Where will you be living this fall?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On campus residence hall</fullName>
            </value>
            <value>
                <fullName>At home with parents</fullName>
            </value>
            <value>
                <fullName>Off-campus housing</fullName>
            </value>
            <value>
                <fullName>Greek house</fullName>
            </value>
            <value>
                <fullName>Greek residence hall</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know yet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>