force-app/main/default/objects/Contact/fields/Which_programs_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Which_programs_are_you_interested_in__c</fullName>
    <label>Which programs are you interested in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring 2016 Charter Communications</fullName>
            </value>
            <value>
                <fullName>Spring 2016 Coffee-mate Insights</fullName>
            </value>
            <value>
                <fullName>Spring 2016 Gatorade</fullName>
            </value>
            <value>
                <fullName>Spring 2016 GEICO</fullName>
            </value>
            <value>
                <fullName>Spring 2016 General Interest</fullName>
            </value>
            <value>
                <fullName>Spring 2016 Zipcar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>