force-app/main/default/objects/Contact/fields/Will_you_make_your_Instagram_public__c.field-meta.xml
<CustomField>
    <fullName>Will_you_make_your_Instagram_public__c</fullName>
    <label>Will you make your Instagram public?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>My account is already public</fullName>
            </value>
            <value>
                <fullName>My account is already public.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>