force-app/main/default/objects/Contact/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>5th Year Senior</fullName>
            </value>
            <value>
                <fullName>Graduate Student</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>